@@ -1,27 +1,29 @@
 package com.deveagles.be15_deveagles_be.features.sales.query.service.impl;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.*;
 
 import com.deveagles.be15_deveagles_be.common.dto.Pagination;
+import com.deveagles.be15_deveagles_be.common.exception.BusinessException;
+import com.deveagles.be15_deveagles_be.common.exception.ErrorCode;
 import com.deveagles.be15_deveagles_be.features.sales.query.dto.request.SalesListFilterRequest;
-import com.deveagles.be15_deveagles_be.features.sales.query.dto.response.SalesListResponse;
-import com.deveagles.be15_deveagles_be.features.sales.query.dto.response.SalesListResult;
-import com.deveagles.be15_deveagles_be.features.sales.query.mapper.SalesMapper;
-import java.time.LocalDate;
-import java.util.Arrays;
+import com.deveagles.be15_deveagles_be.features.sales.query.dto.response.*;
+import com.deveagles.be15_deveagles_be.features.sales.query.mapper.*;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.*;
 
 class SalesQueryServiceImplTest {
 
   @Mock private SalesMapper salesMapper;
+  @Mock private ItemSalesQueryMapper itemSalesQueryMapper;
+  @Mock private PrepaidPassSalesQueryMapper prepaidPassSalesQueryMapper;
+  @Mock private SessionPassSalesQueryMapper sessionPassSalesQueryMapper;
 
-  @InjectMocks private SalesQueryServiceImpl salesQueryService;
+  @InjectMocks private SalesQueryServiceImpl service;
 
   @BeforeEach
   void setUp() {
@@ -29,46 +31,119 @@ class SalesQueryServiceImplTest {
   }
 
   @Test
-  void getSalesList_shouldReturnFilteredResultAndPagination() {
-    // given
+  @DisplayName("getSalesList - 정상")
+  void getSalesList_success() {
     Long shopId = 1L;
-    SalesListFilterRequest filter = new SalesListFilterRequest();
-    filter.setStartDate(LocalDate.of(2024, 1, 1));
-    filter.setEndDate(LocalDate.of(2024, 12, 31));
-    filter.setSaleTypes(List.of("ITEMS", "REFUND"));
-    filter.setStaffId(100L);
-    filter.setPage(1);
-    filter.setSize(10);
+    SalesListFilterRequest filter = mock(SalesListFilterRequest.class);
+    when(filter.getSize()).thenReturn(10);
+    when(filter.getPage()).thenReturn(1);
 
-    SalesListResponse sale1 = new SalesListResponse();
-    sale1.setSalesId(1L);
-    sale1.setSalesType("ITEMS");
-    sale1.setStaffName("홍길동");
+    SalesListResponse sale = mock(SalesListResponse.class);
+    when(sale.getSalesId()).thenReturn(100L);
 
-    SalesListResponse sale2 = new SalesListResponse();
-    sale2.setSalesId(2L);
-    sale2.setSalesType("REFUND");
-    sale2.setStaffName("김영희");
+    PaymentsDTO payment = mock(PaymentsDTO.class);
+    when(payment.getSalesId()).thenReturn(100L);
 
-    List<SalesListResponse> mockList = Arrays.asList(sale1, sale2);
+    when(salesMapper.findSalesListWithoutPayments(shopId, filter)).thenReturn(List.of(sale));
+    when(salesMapper.findPaymentsBySalesIds(List.of(100L))).thenReturn(List.of(payment));
+    when(salesMapper.countSalesList(shopId, filter)).thenReturn(1L);
 
-    when(salesMapper.findSalesList(shopId, filter)).thenReturn(mockList);
-    when(salesMapper.countSalesList(shopId, filter)).thenReturn(2L);
+    SalesListResult result = service.getSalesList(shopId, filter);
 
-    // when
-    SalesListResult result = salesQueryService.getSalesList(shopId, filter);
+    assertThat(result).isNotNull();
+    assertThat(result.getList()).hasSize(1);
+    assertThat(result.getPagination()).isInstanceOf(Pagination.class);
+  }
 
-    // then
-    assertThat(result.getList()).hasSize(2);
-    assertThat(result.getList().get(0).getSalesType()).isEqualTo("ITEMS");
-    assertThat(result.getList().get(1).getSalesType()).isEqualTo("REFUND");
+  @Test
+  @DisplayName("getItemSalesDetail - 정상")
+  void getItemSalesDetail_success() {
+    Long itemSalesId = 1L;
+    Long salesId = 10L;
 
-    Pagination pagination = result.getPagination();
-    assertThat(pagination.getCurrentPage()).isEqualTo(1);
-    assertThat(pagination.getTotalItems()).isEqualTo(2);
-    assertThat(pagination.getTotalPages()).isEqualTo(1);
+    ItemSalesDetailResponse detail = new ItemSalesDetailResponse();
+    detail.setSalesId(salesId);
 
-    verify(salesMapper).findSalesList(shopId, filter);
-    verify(salesMapper).countSalesList(shopId, filter);
+    when(itemSalesQueryMapper.findItemSalesDetail(itemSalesId)).thenReturn(detail);
+    when(itemSalesQueryMapper.findPaymentsBySalesId(salesId))
+        .thenReturn(List.of(mock(PaymentsDTO.class)));
+
+    ItemSalesDetailResponse result = service.getItemSalesDetail(itemSalesId);
+
+    assertThat(result).isNotNull();
+    assertThat(result.getPayments()).hasSize(1);
+  }
+
+  @Test
+  @DisplayName("getItemSalesDetail - 존재하지 않음")
+  void getItemSalesDetail_notFound() {
+    when(itemSalesQueryMapper.findItemSalesDetail(anyLong())).thenReturn(null);
+
+    BusinessException ex =
+        assertThrows(BusinessException.class, () -> service.getItemSalesDetail(999L));
+
+    assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.SALES_NOT_FOUND);
+  }
+
+  @Test
+  @DisplayName("getPrepaidPassSalesDetail - 정상")
+  void getPrepaidPassSalesDetail_success() {
+    Long prepaidPassSalesId = 1L;
+    Long salesId = 20L;
+
+    PrepaidPassSalesDetailResponse detail = new PrepaidPassSalesDetailResponse();
+    detail.setSalesId(salesId);
+
+    when(prepaidPassSalesQueryMapper.findPrepaidPassSalesDetail(prepaidPassSalesId))
+        .thenReturn(detail);
+    when(prepaidPassSalesQueryMapper.findPaymentsBySalesId(salesId))
+        .thenReturn(List.of(mock(PaymentsDTO.class)));
+
+    PrepaidPassSalesDetailResponse result = service.getPrepaidPassSalesDetail(prepaidPassSalesId);
+
+    assertThat(result).isNotNull();
+    assertThat(result.getPayments()).hasSize(1);
+  }
+
+  @Test
+  @DisplayName("getPrepaidPassSalesDetail - 존재하지 않음")
+  void getPrepaidPassSalesDetail_notFound() {
+    when(prepaidPassSalesQueryMapper.findPrepaidPassSalesDetail(anyLong())).thenReturn(null);
+
+    BusinessException ex =
+        assertThrows(BusinessException.class, () -> service.getPrepaidPassSalesDetail(999L));
+
+    assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.SALES_NOT_FOUND);
+  }
+
+  @Test
+  @DisplayName("getSessionPassSalesDetail - 정상")
+  void getSessionPassSalesDetail_success() {
+    Long sessionPassSalesId = 1L;
+    Long salesId = 30L;
+
+    SessionPassSalesDetailResponse detail = new SessionPassSalesDetailResponse();
+    detail.setSalesId(salesId);
+
+    when(sessionPassSalesQueryMapper.findSessionPassSalesDetail(sessionPassSalesId))
+        .thenReturn(detail);
+    when(sessionPassSalesQueryMapper.findPaymentsBySalesId(salesId))
+        .thenReturn(List.of(mock(PaymentsDTO.class)));
+
+    SessionPassSalesDetailResponse result = service.getSessionPassSalesDetail(sessionPassSalesId);
+
+    assertThat(result).isNotNull();
+    assertThat(result.getPayments()).hasSize(1);
+  }
+
+  @Test
+  @DisplayName("getSessionPassSalesDetail - 존재하지 않음")
+  void getSessionPassSalesDetail_notFound() {
+    when(sessionPassSalesQueryMapper.findSessionPassSalesDetail(anyLong())).thenReturn(null);
+
+    BusinessException ex =
+        assertThrows(BusinessException.class, () -> service.getSessionPassSalesDetail(999L));
+
+    assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.SALES_NOT_FOUND);
   }
 }
